compiler/test/conformance/valid/decl_import_bare.tu
// decl: import "mod" (forma bare / side-effect)
import "conf_mathmod"

fn main() {
  print("import bare")
}
