compiler/test/conformance/invalid/inv_unclosed_paren.tu
// INVÁLIDO: parêntese de chamada não fechado
fn main() {
  print("olá"
}
